--- a/.gitignore
+++ b/.gitignore
@@ -52,11 +52,11 @@ out/
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env
+#.env.local
+#.env.development.local
+#.env.test.local
+#.env.production.local
+# .env
 
 npm-debug.log*
 yarn-debug.log*
